<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/bg_round_corner_all"
                android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textColor="@color/text_color"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialogContainTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogTitleTv"
        android:layout_marginTop="@dimen/dialog_contain_btn_margin"
        android:gravity="center"
        android:text="@string/dialog_contain"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogContainTv"
        android:layout_marginTop="@dimen/dialog_contain_btn_margin">

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/btn_cancel"
            android:textColor="@drawable/selector_text_blue_to_white"
            android:background="@drawable/selector_round_bottom_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnSignOut"
            android:textColor="@drawable/selector_text_blue_to_white"
            android:text="@string/dialog_btn_yes"
            android:background="@drawable/selector_round_bottom_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>